# spin_predictor

./: .gitignore  Predictor.sqlite3  pyproject.toml
Documents/: Analisis_Aplicacion_Django (1).docx
app/: settings.py
config/: settings.py  urls.py  views.py
landing/: urls.py  views.py
landing/templates/: base.html  home.html  inicio.html  login.html  navbar.html
predict/: forms.py  urls.py  views.py
predict/static/js/: parameters.js
predict/templates/: game.html  juego.html  parameters.html
templates/: base.html
users/: models.py
