[tool.poetry]
name = "spin-predictor"
version = "0.1.0"
description = " "
authors = ["jonathan-escritorio <joni92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
absl-py = "2.1.0"
astunparse = "1.6.3"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
et-xmlfile = "1.1.0"
flatbuffers = "24.3.25"
future = "1.0.0"
gast = "0.6.0"
google-pasta = "0.2.0"
greenlet = "3.0.3"
grpcio = "1.65.1"
h5py = "3.11.0"
idna = "3.7"
joblib = "1.4.2"
keras = "3.4.1"
libclang = "18.1.1"
markupsafe = "2.1.5"
ml-dtypes = "0.4.0"
namex = "0.0.8"
numpy = "1.26.4"
openpyxl = "3.1.5"
opt-einsum = "3.3.0"
optree = "0.12.1"
packaging = "24.1"
pandas = "2.2.2"
pefile = "2023.2.7"
protobuf = "4.25.3"
pycparser = "2.22"
pygments = "2.18.0"
pyparsing = "3.1.2"
pyqt5-qt5 = "5.15.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
requests = "2.32.3"
rich = "13.7.1"
scikit-learn = "1.5.1"
scipy = "1.14.0"
six = "1.16.0"
tensorboard = "2.17.0"
tensorboard-data-server = "0.7.2"
tensorflow = "2.17.0"
tensorflow-intel = "2.17.0"
tensorflow-io-gcs-filesystem = "0.31.0"
termcolor = "2.4.0"
threadpoolctl = "3.5.0"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
werkzeug = "3.0.3"
whichcraft = "0.6.1"
wrapt = "1.16.0"
django = "^5.1.4"
django-widget-tweaks = "^1.5.0"



[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
